--- a/atlassian/optional/docker-compose.mysql.yml
+++ b/atlassian/optional/docker-compose.mysql.yml
@@ -2,15 +2,15 @@ version: "3.8"
 
 services:
   database:
-    container_name: atlassian_postgres
-    image: postgres:${MYSQL_TAG:-8}
+    container_name: atlassian_mysql
+    image: mysql:${MYSQL_TAG:-8}
     volumes:
       - mysql_data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD_FILE: /run/secrets/mysql_root
     secrets:
       - mysql_root
-    hostname: postgres
+    hostname: mysql
     restart: unless-stopped
 
 volumes:
