persist nginx log

--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -10,12 +10,14 @@ services:
     volumes:
       - etc:/etc/nginx
       - www:/var/www
+      - log:/var/log/nginx
     hostname: nginx
     restart: unless-stopped
 
 volumes:
   etc:
   www:
+  log:
 
 networks:
   default:
