xray: support conf dir by default to replace the optional yaml_conf

--- a/xray/docker-compose.yml
+++ b/xray/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     image: teddysun/xray:${TAG:-latest}
     volumes:
       - conf:/etc/xray
+    environment:
+      XRAY_LOCATION_CONFDIR: /etc/xray
 
 volumes:
   conf:
