xray: fix missing properties and correct volume name

--- a/xray/docker-compose.yml
+++ b/xray/docker-compose.yml
@@ -5,12 +5,14 @@ services:
     container_name: xray
     image: teddysun/xray:${TAG:-latest}
     volumes:
-      - conf:/etc/xray
+      - config:/etc/xray
     environment:
       XRAY_LOCATION_CONFDIR: /etc/xray
+    hostname: xray
+    restart: unless-stopped
 
 volumes:
-  conf:
+  config:
 
 networks:
   default:
