--- a/portainer/optional/docker-compose.local-agent.yml
+++ b/portainer/optional/docker-compose.local-agent.yml
@@ -1,4 +1,12 @@
 services:
+  agent:
+    container_name: portainer_agent
+    image: portainer/agent:${AGENT_TAG:-${TAG:-latest}}
+    volumes:
+      - ${DOCKER_DATA_PATH:-/var/lib/docker}/volumes:/var/lib/docker/volumes
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
+
   portainer:
     command: -H tcp://agent:9001 --tlsskipverify
     depends_on:
