--- a/mitmproxy/docker-compose.yml
+++ b/mitmproxy/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - data:/home/mimtproxy/.mitmproxy
+      - data:/home/mitmproxy/.mitmproxy
     hostname: mitmproxy
     restart: unless-stopped
 
