gitlab: add shm_size option
https://gitlab.com/gitlab-org/gitlab/-/merge_requests/77020

--- a/gitlab/optional/docker-compose.gitlab.yml
+++ b/gitlab/optional/docker-compose.gitlab.yml
@@ -6,6 +6,7 @@ services:
       - config:/etc/gitlab
       - data:/var/opt/gitlab
       - logs:/var/log/gitlab
+    shm_size: ${SHM_SIZE:-256m}
     hostname: gitlab
     restart: unless-stopped
 
