gitlab: publish ssh port

--- a/gitlab/optional/docker-compose.ssh.yml
+++ b/gitlab/optional/docker-compose.ssh.yml
@@ -1,5 +1,7 @@
 services:
   gitlab:
+    ports:
+      - "${SSH_PORT:-2222}:22"
     volumes:
       - /var/opt/gitlab/.ssh:/var/opt/gitlab/.ssh
       - /var/opt/gitlab/.ssh/id_rsa.pub:/gitlab-data/ssh/authorized_keys
