vault: update docker image
> Upcoming in Vault 1.14, we will stop publishing official Dockerhub images and publish only our Verified Publisher images. Users of Docker images should pull from hashicorp/vault instead of vault.

--- a/vault/docker-compose.yml
+++ b/vault/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   vault:
     container_name: vault
-    image: vault:${TAG:-latest}
+    image: hashicorp/vault:${TAG:-latest}
     command: server
     volumes:
       - config:/vault/config
